fixed chrome under win 10 not showing system message background color

--- a/Chat_Group_G/public/css/stylesheet.css
+++ b/Chat_Group_G/public/css/stylesheet.css
@@ -110,7 +110,7 @@ button:hover {
 }
 
 #systemMessage {
-	background: #dc3939b8;
+	background: #DF6A6A;
 }
 
 #chat {
